third_party/move/move-compiler-v2/tests/checking/typing/exp_list_nested.exp

Diagnostics:
error: expected 3 item(s), found 2
  ┌─ tests/checking/typing/exp_list_nested.move:6:9
  │
6 │         (0, (S{}, R{}))
  │         ^^^^^^^^^^^^^^^
